--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 </div>
 <div class="wrapper">
   <div class="trigger site-navigation">
-    <a class="page-link" href="{{site.url}}{{site.baseurl}}">ABOUT ME</a>
+    <a class="page-link" href="/index.html">ABOUT ME</a>
 
     {% for sitePage in site.pages %}
     {% if sitePage.title %}
