--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
   <div class="trigger site-navigation">
     <a class="page-link" href="/index.html">ABOUT ME</a>
 
-    {% for sitePage in site.pages %}
+    {% assign sorted_pages = site.pages | sort:"order" %}
+    {% for sitePage in sorted_pages %}
     {% if sitePage.title %}
 
     <span class="exclamationMark">/</span><a class="page-link" href="{{sitePage.url | prepend: site.baseurl }}">{{sitePage.title}}</a>
