--- a/css/style.scss
+++ b/css/style.scss
@@ -308,7 +308,7 @@ pre {
   text-indent: 2px;
 }
 .manual-content {
-  text-transform: uppercase;
+  // text-transform: uppercase;
   font-size: 18px;
   letter-spacing: 1px;
   text-indent: 2px;
@@ -374,7 +374,7 @@ pre {
 .site-navigation {
   text-align:center;
   text-transform: uppercase;
-  font-size: 15px;
+  font-size: 16px;
   letter-spacing: 2px;
   text-indent: 6px;
   font-family: "CENTAUR", "FangZhengQingKeBenYueSongJianTi";
